crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/014.cypher
MERGE (n:Node {id: $id}) ON CREATE SET n.created = timestamp(); RETURN n
